src/main/deployments/ocp/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: eap-jpa-api-jvm
  name: eap-jpa-api-jvm-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: eap-jpa-api-jvm
  strategy: {}
  template:
    metadata:
      labels:
        name: eap-jpa-api-jvm
    spec:
      containers:
      - image: naveenkendyala/eap-jpa-api-jvm:0.0.50
        name: eap-jpa-api-jvm
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "175Mi"
          limits:
            cpu: "300m"
            memory: "350Mi"
        livenessProbe:
          httpGet:
              port: 8080
              path: /sidebyside-eap-api/api/todos/applive
          initialDelaySeconds: 45
          periodSeconds: 30
          timeoutSeconds: 10    
        readinessProbe:
          httpGet:
            path: /sidebyside-eap-api/api/todos/appready
            port: 8080
          initialDelaySeconds: 50
          periodSeconds: 30
status: {}
